src/objects/zkmulti__MCQueued_Shipment_Status__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__BatchId__c</fullName>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Bulk_Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Shipment</label>
        <referenceTo>zkmulti__MCBulk_Shipment__c</referenceTo>
        <relationshipName>Queued_Shipment_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup</label>
        <referenceTo>zkmulti__MCPickup__c</referenceTo>
        <relationshipLabel>Bulk Pickup Status</relationshipLabel>
        <relationshipName>Bulk_Pickup_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__PrintBatchId__c</fullName>
        <label>Print Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipName>Queued_Shipment_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PROCESSING</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>VALIDATED</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Bulk Pickup Status</label>
    <nameField>
        <displayFormat>BP-Status-{00000000}</displayFormat>
        <label>Bulk Pickup Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Pickup Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>